<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlzTest</string>
    <string name="action_search">Search</string>
    <string name="title_option_detail">Option Detail</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject_id">Subject ID</string>
    <string name="start_session">Begin Session</string>
    <string name="search_title_stimuli">Stimulus, Category or Value</string>
    <string name="search_title_statistics">Subject name or ID</string>
    <string name="upload_stimuli">Upload stimuli from file</string>
    <string name="clear_stimuli">Clear stimuli list</string>
    <string name="action_add">Add new stimulus</string>
    <string name="edit_stimulus">Edit stimulus</string>
    <string name="legend_category">Category</string>
    <string name="legend_name">Name</string>
    <string name="legend_value">Value</string>
    <string name="action_load_preferences">Load Saved Preferences From File</string>
    <string name="action_save_preferences">Save Preferences To File</string>
    <string name="numberOfStimuliTooltip">Number of stimuli pairs to display in trial:</string>
    <string name="numberOfStimuliHeader">Number Of Stimuli</string>
    <string name="maxValDiffTooltip">Maximum Value Difference (inclusive):</string>
    <string name="minValDiffToolTip">Minimum Value Difference (inclusive):</string>
    <string name="ValueDiffHeader">Value Difference</string>
    <string name="categoryOptionsHeader">Category Options</string>
    <string name="title_session">Session Activity</string>
    <string name="save_statistics_to_file">Save Statistics to file</string>
    <string name="clear_statistics">Clear Statistics</string>
    <string name="legend_date">Date</string>
    <string name="legend_ID">ID number</string>
    <string name="title_statistics">Statistics</string>
    <string name="sessionCountdownHeader">Session Countdown</string>
    <string name="sessionCountdownTooltip">Number of seconds before session stats</string>
    <string name="action_save_stimuli">Save stimuli to file</string>
    <string name="save_stimuli">save stimuli</string>
    <string name="personalInformationHeader">Personal Information</string>
    <string name="orientationSpaceTooltip">Orientation Space</string>
    <string name="orientationTimeTooltip">Orientation Time</string>
    <string name="totalTooltip">Total</string>
    <string name="MMSEScoresHeader">Mini-Mental State Examination (MMSE) Score</string>
    <string name="sessionTextSizeHeader">Session Stimuli Text Size</string>
    <string name="SpecificStimuliSubsetHeader">Specific Stimuli Subset</string>
    <string name="Cancel">Cancel</string>
    <string name="Okay">Okay</string>
    <string name="SessionStatsHeader">Session Stats</string>
    <string name="action_send_statistics_via_email">Send Statistics via Email</string>
    <string name="IAmSure">I am sure</string>
    <string name="action_delete">delete stimulus</string>
    <string name="Close">Close</string>
    <string name="ValueDifferenceTooltip">The \"value difference\" parameter refers to the difference in the distance score between a given pair of stimuli. The maximum and minimum limit the range of of possible pairings such that no two stimuli whose difference is below the \"minimum value difference\" or above the \"maximum value difference\" will be compared.</string>
    <string name="SpecificStimuliTooltip">\"Choose Specific Stimuli\" option allows to include only selected stimuli out of of the stimuli list in the current testing. This choice is disabled unless marking \"Use Specific Stimuli Subset\"</string>


</resources>
