<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2014. Barak Yoresh. all rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
      xmlns:AlzTest="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add"
        android:showAsAction="collapseActionView|ifRoom" />
    <item android:id="@+id/action_upload"
        android:icon="@drawable/ic_action_upload"
        android:title="@string/upload_stimuli"/>
    <item android:id="@+id/action_clear"
        android:icon="@drawable/ic_action_upload"
        android:title="@string/clear_stimuli"/>
</menu>