    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:measureWithLargestChild="false">

        <EditText
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="70dp"
            android:id="@+id/ET_subject_name"
            android:hint="@string/subject_name" />

        <EditText
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="50dp"
            android:id="@+id/ET_subject_id"
            android:inputType="number"
            android:hint="@string/subject_id"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="@string/start_session"
            android:id="@+id/btnStartSession" />
    </LinearLayout>
