<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Barak Yoresh. all rights reserved.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- choose specific categories -->





    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:text="@string/categoryOptionsHeader" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="3"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/legend_category" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="Include In Session" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="Include In Analysis" />

        </LinearLayout>

        <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

        <ListView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/categoryListView" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- value difference widget -->
    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:text="@string/ValueDiffHeader" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/minValDiffToolTip" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minValueDifferenceSpinner"
            android:layout_marginRight="35dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/maxValDiffTooltip" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/maxValueDifferenceSpinner"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:src="@drawable/ic_action_about"
                android:id="@+id/infButtonValueDifference"/>

        </RelativeLayout>

    </LinearLayout>



    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- number of stimuli -->
    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:text="@string/numberOfStimuliHeader" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/numberOfStimuliTooltip" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberOfStimuliPairsEditText"
            android:inputType="number"
            android:text="5"
            android:maxLength="4" />


    </LinearLayout>



    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


    <!-- session countdown timer -->

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:text="@string/sessionCountdownHeader" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sessionCountdownTooltip" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sessionCountdownSpinner"/>


    </LinearLayout>



    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- session text size -->

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:text="@string/sessionTextSizeHeader" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Set session stimuli text size to " />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSizeSpinner"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="preview"
            android:clickable="true"
            android:id="@+id/textSizeInfoButton"/>

    </LinearLayout>



    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <!-- specific stimuli subset -->

    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:text="@string/SpecificStimuliSubsetHeader" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Choose Specific Stimuli"
            android:id="@+id/chooseSpecificStimuliButton" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Use Specific Stimuli Subset"
            android:id="@+id/specifiStimuliSubsetCheckBox" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:src="@drawable/ic_action_about"
                android:id="@+id/infButtonSpecificStimuli"/>

        </RelativeLayout>



    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>


</LinearLayout>
</ScrollView>