<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Barak Yoresh. all rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:id="@+id/legend_date"
            android:text="@string/legend_date"/>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:id="@+id/legend_name"
            android:text="@string/legend_name"/>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:id="@+id/legend_ID"
            android:text="@string/legend_ID"/>
        </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/statistics_list">

    </ListView>

</LinearLayout>