<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Barak Yoresh. all rights reserved.
  -->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- bar graph widget -->
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:text="@string/SessionStatsHeader" />

        <!-- succ/resp graph -->
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="180dip"
            android:id="@+id/successDivResponseGraph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:id="@+id/successDivResponseCategories">
        </LinearLayout>

        <!-- resp graph -->
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="180dip"
            android:id="@+id/responseGraph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:id="@+id/responseCategories">
        </LinearLayout>

        <!-- succ graph -->
        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="180dip"
            android:id="@+id/successGraph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:id="@+id/successCategories">
        </LinearLayout>

        <!-- timecourse button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time Course"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/timeCourseButton"/>


        <!-- MMSE widget -->
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:text="@string/MMSEScoresHeader" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/orientationSpaceTooltip" />

            <TextView
                android:layout_marginRight="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:id="@+id/MMSEorientationSpaceScore"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/orientationTimeTooltip" />

            <TextView
                android:layout_marginRight="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:id="@+id/MMSEorientationTimeScore"/>

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/totalTooltip" />

            <TextView
                android:layout_marginRight="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:id="@+id/MMSEtotalScore"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>